--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "netlify-cli": "^17.23.1",
     "netlify-lambda": "^2.0.16",
+    "node-cron": "^3.0.3",
     "serverless-http": "^3.2.0"
   },
   "devDependencies": {
